src/types/tests/snapshots/tgbot__types__tests__checklist__checklist-2.snap
---
source: src/types/tests/checklist.rs
expression: "expected_struct.with_others_can_add_tasks(true).with_others_can_mark_tasks_as_done(true).with_title_entities([TextEntity::bold(0..2)])"
---
{
  "tasks": [],
  "title": "test",
  "others_can_add_tasks": true,
  "others_can_mark_tasks_as_done": true,
  "title_entities": [
    {
      "offset": 0,
      "length": 2,
      "type": "bold"
    }
  ]
}
