src/types/tests/snapshots/tgbot__types__tests__checklist__checklist.snap
---
source: src/types/tests/checklist.rs
expression: expected_struct.clone()
---
{
  "tasks": [],
  "title": "test"
}
