src/types/tests/snapshots/tgbot__types__tests__checklist__checklist_tasks_added-2.snap
---
source: src/types/tests/checklist.rs
expression: "expected_struct.with_checklist_message(Message::new(1, 0,\nSupergroupChat::new(1, \"test\"), MessageData::Unknown(serde_json::json!({})),\nUser::new(1, \"test\", false),))"
---
{
  "tasks": [
    {
      "id": 1,
      "text": "test"
    }
  ],
  "checklist_message": {
    "chat": {
      "type": "supergroup",
      "id": 1,
      "title": "test"
    },
    "date": 0,
    "has_protected_content": false,
    "message_id": 1,
    "is_automatic_forward": false,
    "from": {
      "first_name": "test",
      "id": 1,
      "is_bot": false
    }
  }
}
