src/types/tests/snapshots/tgbot__types__tests__checklist__checklist_tasks_added.snap
---
source: src/types/tests/checklist.rs
expression: expected_struct.clone()
---
{
  "tasks": [
    {
      "id": 1,
      "text": "test"
    }
  ]
}
