src/types/tests/snapshots/tgbot__types__tests__checklist__edit_message_checklist.snap
---
source: src/types/tests/checklist.rs
expression: actual_data
---
{
  "business_connection_id": "c-id",
  "chat_id": 1,
  "checklist": {
    "tasks": [
      {
        "id": 1,
        "text": "test"
      }
    ],
    "title": "test"
  },
  "message_id": 2
}
