src/types/tests/snapshots/tgbot__types__tests__checklist__input_checklist-2.snap
---
source: src/types/tests/checklist.rs
expression: expected_struct.clone()
---
{
  "tasks": [
    {
      "id": 1,
      "text": "test"
    }
  ],
  "title": "test",
  "parse_mode": "MarkdownV2"
}
