src/types/tests/snapshots/tgbot__types__tests__checklist__input_checklist_task-2.snap
---
source: src/types/tests/checklist.rs
expression: expected_struct.clone()
---
{
  "id": 1,
  "text": "test",
  "parse_mode": "HTML"
}
